[package]
name = "tic-tac-toe"
version = "0.2.2"
edition = "2021"
authors = ["Your Name <you@example.com>"]

[dependencies]
bevy = { version = "0.17", default-features = true }
rand = "0.8"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = "z"
codegen-units = 1
lto = true
panic = "abort"
strip = true
